<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_song_height"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_loop_model_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_play_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_padding"
                android:text="@string/list_loop"
                android:textColor="@color/text"/>

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/music_count1"
                android:textColor="@color/text"/>
        </LinearLayout>

        <Button
            android:id="@+id/bt_collection"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:background="@drawable/selector_button_reverse"
            android:text="@string/collection_all"
            android:textColor="@drawable/selector_text_reverse"/>

        <ImageView
            android:id="@+id/iv_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_music_delete"
            android:layout_marginRight="@dimen/button_padding"
            android:paddingLeft="@dimen/button_padding"
            android:paddingRight="@dimen/button_padding"/>

    </LinearLayout>

</LinearLayout>